data/all_generated_tests/raw_wast_tests/nop_StackCorruption_146.wast
;; 7. **Test Description**:    Add `nop` before and after local variable manipulation instructions like `local.get` and `local.set`. Verify the stack state before and after such manipulations.    **Constraint Checked**: Ensures `nop` doesn’t interfere with local variable stack operations.    **Relation to Stack Corruption**: Mishandling here could lead to incorrect local variable values and corrupted stack states.

 ;; (module
  (func $local-vars (result i32)
    (nop)
    (local.get 0) (local.set 0) (local.get 0)
    (nop)
  )
)
(assert_malformed
  (module
    (func $local-vars (result i32)
      (nop)
      (local.get 0) (local.set 0) (local.get 0)
      (nop)
    )
  )
  "malformed"
)